出品機能のカテゴリー欄の修正

--- a/config/locales/models/product.ja.yml
+++ b/config/locales/models/product.ja.yml
@@ -6,6 +6,7 @@ ja:
       product:
         name: 商品名
         text: 商品説明
+        category_id: カテゴリー
         size_id: サイズ
         products_status_id: 商品の状態
         shipping_charges_id: 配送料の負担
